--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ crispy-bootstrap5==0.7
 Django==4.1.6
 django-crispy-forms==2.0
 Pillow==9.4.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.6
 sqlparse==0.4.3
 tzdata==2022.7
